--- a/pom.xml
+++ b/pom.xml
@@ -36,6 +36,17 @@
                     <artifactId>maven-source-plugin</artifactId>
                     <version>2.1.2</version>
                 </plugin>
+                 <plugin>
+                                <groupId>org.apache.tomcat.maven</groupId>
+                                <artifactId>tomcat7-maven-plugin</artifactId>
+                                <version>2.2</version>
+                        <configuration>
+                        <url>http://ltom00ea.eastasia.cloudapp.azure.com:8080/manager/text</url>
+                        <server>TomcatServer</server>
+                        <path>/java-web-app</path>
+                          </configuration>
+          </plugin>
+
             </plugins>
         </pluginManagement>
         <plugins>
