--- a/multi3/pom.xml
+++ b/multi3/pom.xml
@@ -43,6 +43,16 @@
                             </archive>
                         </configuration>
                     </plugin>
+                     <plugin>
+                                <groupId>org.apache.tomcat.maven</groupId>
+                                <artifactId>tomcat7-maven-plugin</artifactId>
+                                <version>2.2</version>
+                        <configuration>
+                        <url>http://ltom00ea.eastasia.cloudapp.azure.com:8080/manager/text</url>
+                        <server>TomcatServer</server>
+                        <path>/java-web-app</path>
+                          </configuration>
+          </plugin>
                 </plugins>
             </build>
         </profile>
